Fix the layout bugs

--- a/source/sass/block-styles/_feedback.scss
+++ b/source/sass/block-styles/_feedback.scss
@@ -3,6 +3,7 @@
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
+  padding: 0 15px;
   min-height: 670px;
   background-color: #00b2ff;
   background-image: url("../img/airplan.png");
