--- a/source/sass/block-styles/_header.scss
+++ b/source/sass/block-styles/_header.scss
@@ -1,8 +1,8 @@
 .header {
   width: 100%;
-  max-width: 1410px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 33px 0 30px 0;
+  padding: 33px 15px 30px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
