--- a/source/sass/block-styles/_main.scss
+++ b/source/sass/block-styles/_main.scss
@@ -1,5 +1,6 @@
 .main {
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .main__inner-wrapper {
